--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -821,7 +821,7 @@ BEGIN
     CONTROL         "U&se the following stylesheet",IDC_USESTYLESHEET,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,26,273,10
     EDITTEXT        IDC_STYLESHEET,18,39,211,13,ES_AUTOHSCROLL
-    LTEXT           "Stylesheet not found",IDC_STYLESHEETNOTFOUND,236,41,140,
+    LTEXT           "Stylesheet not found",IDC_STYLESHEETNOTFOUND,300,41,140,
                     8,NOT WS_VISIBLE
     GROUPBOX        "Style",IDC_STATIC,7,61,93,157
     CONTROL         "&Wrapped",IDC_STYLE_WRAP,"Button",BS_AUTORADIOBUTTON | 
@@ -835,11 +835,12 @@ BEGIN
     ICON            IDI_STYLE_WRAP,IDC_STATIC,26,84,20,20,WS_GROUP
     ICON            IDI_STYLE_TABLE,IDC_STATIC,26,118,20,20
     ICON            IDI_STYLE_PARA,IDC_STATIC,26,154,20,20
-    ICON            IDI_STYLE_IMAGE,IDC_STATIC,26,190,21,20
+    ICON            IDI_STYLE_IMAGE,IDC_STATIC,26,190,20,20
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE | 
                     WS_DISABLED | WS_GROUP,110,61,370,157
     DEFPUSHBUTTON   "OK",IDOK,376,225,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,430,225,50,14
+    PUSHBUTTON      "Configure...",IDC_CONFIGURESTYLESHEET,233,38,63,14
 END
 
 IDD_WELCOME_PAGE1 DIALOG DISCARDABLE  0, 0, 276, 139
@@ -1025,8 +1026,9 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,327,225,50,14
     COMBOBOX        IDC_TRANSFORMTITLE,40,7,128,30,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Stylesheet not found",IDC_STYLESHEETNOTFOUND,236,41,140,
-                    8,NOT WS_VISIBLE
+    LTEXT           "Stylesheet not found",IDC_STYLESHEETNOTFOUND,300,41,76,
+                    16,NOT WS_VISIBLE
+    PUSHBUTTON      "Configure...",IDC_CONFIGURESTYLESHEET,233,38,63,14
 END
 
 IDD_FILTER_BAR DIALOG DISCARDABLE  0, 0, 406, 169
