--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -463,6 +463,9 @@
     <ClCompile Include="Icon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StylesheetParamConfigDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -961,6 +964,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Icon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StylesheetParamConfigDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
