--- a/ToDoList/ToDoList.vcxproj.filters
+++ b/ToDoList/ToDoList.vcxproj.filters
@@ -382,6 +382,9 @@
     <ClCompile Include="TDCCustomAttribData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TDLStylesheetParamConfigDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Interfaces\IContentControl.h">
@@ -823,6 +826,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TDLCommentsCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TDLStylesheetParamConfigDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
