--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -2931,7 +2931,26 @@ BEGIN
             MENUITEM "Trac&k Time Spent",           ID_EDIT_CLOCK_TASK
             MENUITEM "&Add Time to Task Log File",  ID_ADDTIMETOLOGFILE
             MENUITEM SEPARATOR
-            MENUITEM "&Offset Dates...",            ID_EDIT_OFFSETDATES
+            MENUITEM "&Offset Task Dates...",       ID_EDIT_OFFSETDATES
+            POPUP "O&ffset Task Dates", INACTIVE
+            BEGIN
+                POPUP "&Forwards By"
+                BEGIN
+                    MENUITEM "One Day",                     ID_OFFSETDATES_FORWARDSBY_ONEDAY
+                    MENUITEM "One Weekday",                 ID_OFFSETDATES_FORWARDSBY_ONEWEEKDAY
+                    MENUITEM "One Week",                    ID_OFFSETDATES_FORWARDSBY_ONEWEEK
+                    MENUITEM "One Month",                   ID_OFFSETDATES_FORWARDSBY_ONEMONTH
+                    MENUITEM "One Year",                    ID_OFFSETDATES_FORWARDSBY_ONEYEAR
+                END
+                POPUP "&Backwards By"
+                BEGIN
+                    MENUITEM "One Day",                     ID_OFFSETDATES_BACKWARDSBY_ONEDAY
+                    MENUITEM "One Weekday",                 ID_OFFSETDATES_BACKWARDSBY_ONEWEEKDAY
+                    MENUITEM "One Week",                    ID_OFFSETDATES_BACKWARDSBY_ONEWEEK
+                    MENUITEM "One Month",                   ID_OFFSETDATES_BACKWARDSBY_ONEMONTH
+                    MENUITEM "One Year",                    ID_OFFSETDATES_BACKWARDSBY_ONEYEAR
+                END
+            END
             MENUITEM SEPARATOR
             MENUITEM "Add Task File &Link...",      ID_EDIT_SETFILEREF
             MENUITEM "Open Task File Link",         ID_EDIT_OPENFILEREF1
