--- a/ImportExport/OutlookExporter/OutlookExporterCore/OutlookExporterCore.csproj
+++ b/ImportExport/OutlookExporter/OutlookExporterCore/OutlookExporterCore.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{B2901A7A-7FE0-4E7A-82D3-2024589C0672}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleImpExp</RootNamespace>
-    <AssemblyName>SampleImpExpCore</AssemblyName>
+    <RootNamespace>OutlookExporter</RootNamespace>
+    <AssemblyName>OutlookExporterCore</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
