--- a/ToDoList/ToDoList.vcxproj.filters
+++ b/ToDoList/ToDoList.vcxproj.filters
@@ -385,6 +385,9 @@
     <ClCompile Include="TDLStylesheetParamConfigDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TDLGoToTaskDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Interfaces\IContentControl.h">
@@ -829,6 +832,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TDLStylesheetParamConfigDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TDLGoToTaskDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
