--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1990,18 +1990,18 @@ BEGIN
     PUSHBUTTON      "&Refresh",2007,343,7,50,14
 END
 
-IDD_GOTOTASK_DIALOG DIALOG DISCARDABLE  0, 0, 228, 74
+IDD_GOTOTASK_DIALOG DIALOG DISCARDABLE  0, 0, 174, 104
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Go To Task"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "Task I&D",IDC_STATIC,7,9,26,8
-    EDITTEXT        IDC_TASKID,61,7,160,14,ES_AUTOHSCROLL
-    LTEXT           "Task &title",IDC_STATIC,7,35,30,8
-    EDITTEXT        IDC_TASKTITLE,61,33,160,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,115,53,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,171,53,50,14
-    LTEXT           "or",IDC_STATIC,17,22,40,8
+    LTEXT           "Task I&D",IDC_STATIC,7,7,159,8
+    EDITTEXT        IDC_TASKID,7,17,160,14,ES_AUTOHSCROLL
+    LTEXT           "Task &Title",IDC_STATIC,7,50,160,8
+    EDITTEXT        IDC_TASKTITLE,7,60,160,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,63,81,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,117,81,50,14
+    LTEXT           "or",IDC_STATIC,7,36,40,8
 END
 
 
@@ -2712,95 +2712,72 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "Open &From"
         BEGIN
-            MENUITEM "3rd Party Storage 1", 
-                                          ID_FILE_OPEN_USERSTORAGE1
-            , GRAYED   
-            MENUITEM "3rd Party Storage 2", 
-                                          ID_FILE_OPEN_USERSTORAGE2
-            , GRAYED   
-            MENUITEM "3rd Party Storage 3", 
-                                          ID_FILE_OPEN_USERSTORAGE3
-            , GRAYED   
-            MENUITEM "3rd Party Storage 4", 
-                                          ID_FILE_OPEN_USERSTORAGE4
-            , GRAYED   
-            MENUITEM "3rd Party Storage 5", 
-                                          ID_FILE_OPEN_USERSTORAGE5
-            , GRAYED   
-            MENUITEM "3rd Party Storage 6", 
-                                          ID_FILE_OPEN_USERSTORAGE6
-            , GRAYED   
-            MENUITEM "3rd Party Storage 7", 
-                                          ID_FILE_OPEN_USERSTORAGE7
-            , GRAYED   
-            MENUITEM "3rd Party Storage 8", 
-                                          ID_FILE_OPEN_USERSTORAGE8
-            , GRAYED   
-            MENUITEM "3rd Party Storage 9", 
-                                          ID_FILE_OPEN_USERSTORAGE9
-            , GRAYED   
-            MENUITEM "3rd Party Storage 10", 
-                                          ID_FILE_OPEN_USERSTORAGE10
-            , GRAYED   
-            MENUITEM "3rd Party Storage 11", 
-                                          ID_FILE_OPEN_USERSTORAGE11
-            , GRAYED   
-            MENUITEM "3rd Party Storage 12", 
-                                          ID_FILE_OPEN_USERSTORAGE12
-            , GRAYED   
-            MENUITEM "3rd Party Storage 13", 
-                                          ID_FILE_OPEN_USERSTORAGE13
-            , GRAYED   
-            MENUITEM "3rd Party Storage 14", 
-                                          ID_FILE_OPEN_USERSTORAGE14
-            , GRAYED   
-            MENUITEM "3rd Party Storage 15", 
-                                          ID_FILE_OPEN_USERSTORAGE15
-            , GRAYED   
-            MENUITEM "3rd Party Storage 16", 
-                                                    ID_FILE_OPEN_USERSTORAGE16
+            MENUITEM "3rd Party Storage 1",         ID_FILE_OPEN_USERSTORAGE1
+            , GRAYED
+            MENUITEM "3rd Party Storage 2",         ID_FILE_OPEN_USERSTORAGE2
+            , GRAYED
+            MENUITEM "3rd Party Storage 3",         ID_FILE_OPEN_USERSTORAGE3
+            , GRAYED
+            MENUITEM "3rd Party Storage 4",         ID_FILE_OPEN_USERSTORAGE4
+            , GRAYED
+            MENUITEM "3rd Party Storage 5",         ID_FILE_OPEN_USERSTORAGE5
+            , GRAYED
+            MENUITEM "3rd Party Storage 6",         ID_FILE_OPEN_USERSTORAGE6
+            , GRAYED
+            MENUITEM "3rd Party Storage 7",         ID_FILE_OPEN_USERSTORAGE7
+            , GRAYED
+            MENUITEM "3rd Party Storage 8",         ID_FILE_OPEN_USERSTORAGE8
+            , GRAYED
+            MENUITEM "3rd Party Storage 9",         ID_FILE_OPEN_USERSTORAGE9
+            , GRAYED
+            MENUITEM "3rd Party Storage 10",        ID_FILE_OPEN_USERSTORAGE10
+            , GRAYED
+            MENUITEM "3rd Party Storage 11",        ID_FILE_OPEN_USERSTORAGE11
+            , GRAYED
+            MENUITEM "3rd Party Storage 12",        ID_FILE_OPEN_USERSTORAGE12
+            , GRAYED
+            MENUITEM "3rd Party Storage 13",        ID_FILE_OPEN_USERSTORAGE13
+            , GRAYED
+            MENUITEM "3rd Party Storage 14",        ID_FILE_OPEN_USERSTORAGE14
+            , GRAYED
+            MENUITEM "3rd Party Storage 15",        ID_FILE_OPEN_USERSTORAGE15
+            , GRAYED
+            MENUITEM "3rd Party Storage 16",        ID_FILE_OPEN_USERSTORAGE16
             , GRAYED
         END
         POPUP "Sa&ve To"
         BEGIN
-            MENUITEM "3rd Party Storage 1", ID_FILE_SAVE_USERSTORAGE1
+            MENUITEM "3rd Party Storage 1",         ID_FILE_SAVE_USERSTORAGE1
             , GRAYED
-            MENUITEM "3rd Party Storage 2", ID_FILE_SAVE_USERSTORAGE2
+            MENUITEM "3rd Party Storage 2",         ID_FILE_SAVE_USERSTORAGE2
             , GRAYED
-            MENUITEM "3rd Party Storage 3", ID_FILE_SAVE_USERSTORAGE3
+            MENUITEM "3rd Party Storage 3",         ID_FILE_SAVE_USERSTORAGE3
             , GRAYED
-            MENUITEM "3rd Party Storage 4", ID_FILE_SAVE_USERSTORAGE4
+            MENUITEM "3rd Party Storage 4",         ID_FILE_SAVE_USERSTORAGE4
             , GRAYED
-            MENUITEM "3rd Party Storage 5", ID_FILE_SAVE_USERSTORAGE5
+            MENUITEM "3rd Party Storage 5",         ID_FILE_SAVE_USERSTORAGE5
             , GRAYED
-            MENUITEM "3rd Party Storage 6", ID_FILE_SAVE_USERSTORAGE6
+            MENUITEM "3rd Party Storage 6",         ID_FILE_SAVE_USERSTORAGE6
             , GRAYED
-            MENUITEM "3rd Party Storage 7", ID_FILE_SAVE_USERSTORAGE7
+            MENUITEM "3rd Party Storage 7",         ID_FILE_SAVE_USERSTORAGE7
             , GRAYED
-            MENUITEM "3rd Party Storage 8", ID_FILE_SAVE_USERSTORAGE8
+            MENUITEM "3rd Party Storage 8",         ID_FILE_SAVE_USERSTORAGE8
             , GRAYED
-            MENUITEM "3rd Party Storage 9", ID_FILE_SAVE_USERSTORAGE9
+            MENUITEM "3rd Party Storage 9",         ID_FILE_SAVE_USERSTORAGE9
             , GRAYED
-            MENUITEM "3rd Party Storage 10", 
-                                            ID_FILE_SAVE_USERSTORAGE10
+            MENUITEM "3rd Party Storage 10",        ID_FILE_SAVE_USERSTORAGE10
             , GRAYED
-            MENUITEM "3rd Party Storage 11", 
-                                                    ID_FILE_SAVE_USERSTORAGE11
+            MENUITEM "3rd Party Storage 11",        ID_FILE_SAVE_USERSTORAGE11
             , GRAYED
-            MENUITEM "3rd Party Storage 12", 
-                                            ID_FILE_SAVE_USERSTORAGE12
+            MENUITEM "3rd Party Storage 12",        ID_FILE_SAVE_USERSTORAGE12
             , GRAYED
-            MENUITEM "3rd Party Storage 13", 
-                                            ID_FILE_SAVE_USERSTORAGE13
+            MENUITEM "3rd Party Storage 13",        ID_FILE_SAVE_USERSTORAGE13
             , GRAYED
-            MENUITEM "3rd Party Storage 14", 
-                                            ID_FILE_SAVE_USERSTORAGE14
+            MENUITEM "3rd Party Storage 14",        ID_FILE_SAVE_USERSTORAGE14
             , GRAYED
-            MENUITEM "3rd Party Storage 15", 
-                                            ID_FILE_SAVE_USERSTORAGE15
+            MENUITEM "3rd Party Storage 15",        ID_FILE_SAVE_USERSTORAGE15
             , GRAYED
-            MENUITEM "3rd Party Storage 16", 
-                                                    ID_FILE_SAVE_USERSTORAGE16
+            MENUITEM "3rd Party Storage 16",        ID_FILE_SAVE_USERSTORAGE16
             , GRAYED
         END
         MENUITEM SEPARATOR
@@ -4057,9 +4034,9 @@ BEGIN
     IDD_GOTOTASK_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 221
+        RIGHTMARGIN, 167
         TOPMARGIN, 7
-        BOTTOMMARGIN, 67
+        BOTTOMMARGIN, 97
     END
 END
 #endif    // APSTUDIO_INVOKED
