--- a/CalendarExt/CalendarExt.vcxproj.filters
+++ b/CalendarExt/CalendarExt.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CalMsg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\CalendarExt.rc2">
