--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -206,7 +206,7 @@ END
 
 IDD_PREFGEN_PAGE DIALOGEX 0, 0, 400, 438
 STYLE WS_CHILD
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     LTEXT           "&Display Language:",IDC_STATIC,7,10,376,10
     CONTROL         "",IDC_LANGUAGE,"ComboBoxEx32",CBS_DROPDOWNLIST | 
@@ -2661,11 +2661,7 @@ IDR_SOCIAL_TOOLBAR TOOLBAR MOVEABLE PURE  16, 15
 BEGIN
     BUTTON      ID_HELP_WIKI
     BUTTON      ID_HELP_GOOGLEGROUP
-    SEPARATOR
     BUTTON      ID_HELP_FACEBOOK
-    BUTTON      ID_HELP_TWITTER
-    BUTTON      ID_HELP_GOOGLEPLUS
-    BUTTON      ID_HELP_LINKEDIN
 END
 
 IDR_TIMETRACKER_TOOLBAR TOOLBAR MOVEABLE PURE  16, 15
@@ -3325,11 +3321,6 @@ BEGIN
     BEGIN
         MENUITEM "&Online Help",                ID_HELP_WIKI
         MENUITEM "&Feedback and Support",       ID_HELP_GOOGLEGROUP
-        MENUITEM SEPARATOR
-        MENUITEM "Fac&ebook",                   ID_HELP_FACEBOOK
-        MENUITEM "&Twitter",                    ID_HELP_TWITTER
-        MENUITEM "&Google Plus",                ID_HELP_GOOGLEPLUS
-        MENUITEM "&LinkedIn",                   ID_HELP_LINKEDIN
         MENUITEM SEPARATOR
         MENUITEM "&Record Bug Report...",       ID_HELP_RECORDBUGREPORT
         MENUITEM SEPARATOR
@@ -5121,10 +5112,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     ID_HELP_FACEBOOK        "\nFacebook"
-    ID_HELP_TWITTER         "\nTwitter"
     ID_HELP_GOOGLEGROUP     "\nFeedback and Support"
-    ID_HELP_GOOGLEPLUS      "\nGoogle Plus"
-    ID_HELP_LINKEDIN        "\nLinkedIn"
 END
 
 STRINGTABLE DISCARDABLE 
