Add option to preserve comments when recreating recurring tasks

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1332,7 +1332,7 @@ BEGIN
     PUSHBUTTON      "&Dismiss",IDC_DISMISS,26,195,50,14
 END
 
-IDD_REUSERECURRINGTASK_DIALOG DIALOG DISCARDABLE  0, 0, 186, 98
+IDD_REUSERECURRINGTASK_DIALOG DIALOG DISCARDABLE  0, 0, 186, 126
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Recurring Task"
 FONT 8, "Tahoma"
@@ -1340,12 +1340,14 @@ BEGIN
     LTEXT           "Do you want to create a new recurring task or reuse the existing recurring task ?",
                     IDC_STATIC,7,7,172,25
     CONTROL         "&Create a new task",IDC_CREATETASK,"Button",
-                    BS_AUTORADIOBUTTON | WS_GROUP,20,39,159,10
+                    BS_AUTORADIOBUTTON | WS_GROUP,20,32,159,10
     CONTROL         "&Reuse existing task",IDC_REUSETASK,"Button",
-                    BS_AUTORADIOBUTTON,20,53,159,10
-    DEFPUSHBUTTON   "OK",IDOK,75,77,50,14,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,129,77,50,14
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,69,174,1
+                    BS_AUTORADIOBUTTON,20,46,159,10
+    DEFPUSHBUTTON   "OK",IDOK,75,105,50,14,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,129,105,50,14
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,96,173,1
+    CONTROL         "Preserve comments",IDC_PRESERVECOMMENTS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,20,78,159,10
 END
 
 IDD_MULTISORT_DIALOG DIALOG DISCARDABLE  0, 0, 232, 94
@@ -1672,12 +1674,12 @@ BEGIN
                     WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_RECURRING_TASK_DIALOG DIALOG DISCARDABLE  0, 0, 384, 231
+IDD_RECURRING_TASK_DIALOG DIALOG DISCARDABLE  0, 0, 384, 246
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Recurrence Options"
 FONT 8, "Tahoma"
 BEGIN
-    GROUPBOX        "Task Occurs:",IDC_STATIC,7,7,90,198
+    GROUPBOX        "Task Occurs:",IDC_STATIC,7,7,90,210
     CONTROL         "&Once",IDC_OCCUR_ONCE,"Button",BS_AUTORADIOBUTTON | 
                     WS_GROUP,14,22,78,10
     CONTROL         "&Daily",IDC_OCCUR_DAILY,"Button",BS_AUTORADIOBUTTON,14,
@@ -1688,25 +1690,27 @@ BEGIN
                     14,67,78,10
     CONTROL         "&Yearly",IDC_OCCUR_YEARLY,"Button",BS_AUTORADIOBUTTON,
                     14,82,78,10
-    GROUPBOX        "Details",IDC_STATIC,105,7,272,198,WS_GROUP
+    GROUPBOX        "Details",IDC_STATIC,105,7,272,210,WS_GROUP
     CONTROL         "",IDC_PAGE_FRAME,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE | WS_DISABLED,116,22,254,113
     LTEXT           "&Calculate next occurrence",IDC_RECALCFROMLABEL,113,167,
                     129,8
-    COMBOBOX        IDC_RECALCFROM,261,165,107,30,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_RECALCFROM,243,165,125,30,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&When I complete this task",IDC_REUSEOPTIONSLABEL,113,
                     186,129,8
-    COMBOBOX        IDC_REUSEOPTIONS,261,183,107,30,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_REUSEOPTIONS,243,183,125,76,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,273,210,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,327,210,50,14
+    DEFPUSHBUTTON   "OK",IDOK,273,225,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,327,225,50,14
     CONTROL         "",IDC_DIVIDER,"Static",SS_ETCHEDHORZ,114,157,256,1
     CONTROL         "&End after",IDC_ENDAFTERNUMRECUR,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,116,138,76,10
     LTEXT           "occurrences",IDC_NUMRECURTRAIL,241,138,118,10,
                     SS_CENTERIMAGE
     EDITTEXT        IDC_NUMRECUR,196,137,40,13,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Preserve comments",IDC_PRESERVECOMMENTS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,243,200,124,10
 END
 
 IDD_RECURRING_DAILY_PAGE DIALOG DISCARDABLE  0, 0, 254, 113
@@ -3883,7 +3887,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 91
+        BOTTOMMARGIN, 119
     END
 
     IDD_MULTISORT_DIALOG, DIALOG
@@ -3958,7 +3962,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 377
         TOPMARGIN, 7
-        BOTTOMMARGIN, 224
+        BOTTOMMARGIN, 239
     END
 
     IDD_RECURRING_DAILY_PAGE, DIALOG
