--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionCore/WordCloudUIExtensionCore.csproj
@@ -55,6 +55,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="AttributeComboBox.cs" />
+    <Compile Include="TdlCloudControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WordCloudUIExtensionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
